Afegida opció entorn a tots els serveis (només codi java)