@@ -1,6 +1,6 @@
 
 package es.caib.pinbalmonitor.plugins.padro;
-import es.caib.pinbal.client.recobriment.scdhpaju.ClientScdhpaju;
+import es.caib.pinbal.client.recobriment.ClientGeneric;
 import es.caib.pinbal.client.recobriment.model.ScspRespuesta;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -14,7 +14,6 @@ import java.io.Serializable;
 import java.util.Arrays;
 import java.util.List;
 
-import es.caib.pinbal.client.recobriment.ClientGeneric;
 import es.caib.pinbal.client.recobriment.model.ScspFuncionario;
 import es.caib.pinbal.client.recobriment.model.ScspTitular;
 import es.caib.pinbal.client.recobriment.model.Solicitud;
@@ -81,53 +80,83 @@ public class ClientPadroConvivenciaController implements Serializable {
     Dotenv dotenv = Dotenv.load();
 
 
-
-    private  final String URL_BASE = dotenv.get("ENDPOINT");
-    private  final String USUARI = dotenv.get("USUARI");    
-    private  final String CONTRASENYA =dotenv.get("SECRET");
-    private  final String SERVEI_SCSP = "SCDCPAJU";
     private  final boolean ENABLE_LOGGING = true;
 
-    ClientScdhpaju client = new ClientScdhpaju(
-        URL_BASE,
-        USUARI,
-        CONTRASENYA);
-            
+
+    
+    private ClientGeneric getClient(String entorn) {
+    	ClientGeneric client;
+    	LOG.info(entorn);
+          if (entorn == "proves") {
+        	client= new ClientGeneric(dotenv.get("ENDPOINT_PROVES"), dotenv.get("USUARI_PROVES"), dotenv.get("SECRET_PROVES"));
+
+    	}
+         
+          else {
+   		 client= new ClientGeneric(dotenv.get("ENDPOINT_PROD"), dotenv.get("USUARI_PROD"), dotenv.get("SECRET_PROD"));
+
+          }
+		return client;
+    }
 
     /**
      * Cridat en fer un submit del formulari per fer la consulta al servei.
      */
-public boolean padro(String codiMunicipi)  {
-ClientScdhpaju.SolicitudScdhpaju solicitud = new ClientScdhpaju.SolicitudScdhpaju();
-solicitud.setIdentificadorSolicitante("S0711001H");
-// Procediment
-solicitud.setCodigoProcedimiento("CODSVDR_GBA_20121107");
-// Unitat tramitadora
-solicitud.setUnidadTramitadora("Unitat de test");
-solicitud.setCodigoUnidadTramitadora("A04123456");
-solicitud.setUnidadTramitadora("Departament de test");
-solicitud.setFinalidad("Test peticionSincrona");
-solicitud.setConsentimiento(ScspConsentimiento.Si);
-ScspFuncionario funcionario = new ScspFuncionario();
-funcionario.setNifFuncionario("00000000T");
-funcionario.setNombreCompletoFuncionario("Funcionari CAIB");
-solicitud.setFuncionario(funcionario);
-ScspTitular titular = new ScspTitular();
-titular.setTipoDocumentacion(ScspTipoDocumentacion.DNI);
-titular.setDocumentacion("12345678Z");
-solicitud.setTitular(titular);
-solicitud.setConsultaPerDocumentIdentitat("NIF", "12345678Z", null);
-solicitud.setConsultaPerDadesPersonals(null, null, null, null, null, null,
-null, null, null);
-solicitud.setConsultaPerReferenciaNia(null);
-solicitud.setProvinciaSolicitud("07");
-solicitud.setMunicipioSolicitud(codiMunicipi);
-solicitud.setNumeroAnyos(null);
+    public boolean padro(String codiMunicipi,  String entorn)  {
+        Solicitud solicitud = new Solicitud();
+
+        solicitud.setIdentificadorSolicitante("S0711001H");
+        // Procediment
+        solicitud.setCodigoProcedimiento("CODSVDR_GBA_20121107");
+        // Unitat tramitadora
+        solicitud.setUnidadTramitadora("Unitat de test");
+        solicitud.setCodigoUnidadTramitadora("A04123456");
+        solicitud.setUnidadTramitadora("Departament de test");
+        solicitud.setFinalidad("Test peticionSincrona");
+        solicitud.setConsentimiento(ScspConsentimiento.Si);
+        ScspFuncionario funcionario = new ScspFuncionario();
+        funcionario.setNifFuncionario("00000000T");
+        funcionario.setNombreCompletoFuncionario("Funcionari CAIB");
+        solicitud.setFuncionario(funcionario);
+        ScspTitular titular = new ScspTitular();
+        titular.setTipoDocumentacion(ScspTipoDocumentacion.DNI);
+        titular.setDocumentacion("12345678Z");
+        solicitud.setTitular(titular);
+        String xmlDadesEspecifiques = "";
+
+        StringBuilder xmlBuilder = new StringBuilder("<?xml version=\"1.0\" encoding=\"UTF-8\"?>");
+        xmlBuilder.append("<DatosEspecificos>");
+        xmlBuilder.append("<Solicitud>");
+        xmlBuilder.append("<ProvinciaSolicitud>07</ProvinciaSolicitud>");
+        xmlBuilder.append("<MunicipioSolicitud>");
+        xmlBuilder.append(codiMunicipi);
+        xmlBuilder.append("</MunicipioSolicitud>");
+        xmlBuilder.append("<Titular>");
+        xmlBuilder.append("<Documentacion>");
+        xmlBuilder.append("<Tipo>");
+        xmlBuilder.append("NIF");
+
+        xmlBuilder.append("</Tipo>");
+        xmlBuilder.append("<Valor>");
+        xmlBuilder.append("43117946F");
+
+        xmlBuilder.append("</Valor>");
+
+        xmlBuilder.append("</Documentacion>");
+
+        xmlBuilder.append("</Titular>");
+
+        xmlBuilder.append("</Solicitud>");
+        xmlBuilder.append("</DatosEspecificos>");
+        xmlDadesEspecifiques = xmlBuilder.toString();
     
+
+            
+        solicitud.setDatosEspecificos(xmlDadesEspecifiques);
         
     
         try {
-            client.peticionSincrona(Arrays.asList(solicitud));
+            getClient(entorn).peticionSincrona("SCDCPAJU", List.of(solicitud));
         return true;
         } catch (Exception e) {
             //FacesMessage message = new FacesMessage(SEVERITY_ERROR, "Error al client Pinbal", e.getMessage());
